# kingdee-k3cloud-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.en.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_en.md  config.yml  feature_request.md  feature_request_en.md
.github/workflows/: ci.yml  pages.yml  release.yml
SDK_Python3.0_V8.2.0/: CLAUDE.md  README.md
docs/: index.html
docs/submissions/: awesome-mcp-servers.md  listings.md
jdyxk-mcp-server/: .env.example  CLAUDE.md  README.md  pyproject.toml  server.py
jdyxk-mcp-server/tests/: test_server.py
src/kingdee_k3cloud_mcp/: __init__.py  server.py
tests/: test_server.py  test_tools.py
